# slint_minesweeper

./: .gitignore  Cargo.toml  Makefile  README  Readme.md  index.html  package-lock.json  package.json
src/: main.rs  minesweeper.rs  ui.rs
ui/: main.slint  tile.slint
