[package]
name = "slint_minesweeper"
version = "0.1.0"
edition = "2021"
build = "build.rs"
rust-version = "1.80.0"

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[lints.clippy]
# https://github.com/rust-lang/rust-clippy
implicit_return = "deny"
needless_return = "allow"

[dependencies]
slint = "1.8.0"
rand = "0.8.5"
web-time = "1.1.0" # https://github.com/rust-lang/rust/issues/48564

[build-dependencies]
slint-build = "1.8.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }
